[FIX] img overflow scroll to auto

--- a/templates/default/theme/default.css
+++ b/templates/default/theme/default.css
@@ -20,7 +20,7 @@ html, body {
 
 img {
 	border: none;
-	overflow: scroll;
+	overflow: auto;
 	vertical-align: middle;
 }
 
